<resources>
    <string name="app_name">SysEstoque</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="email">Main email:</string>
    <string name="erro_email">Invalid mail</string>
    <string name="email_nao_encontrado">E-mail not found</string>
    <string name="email_encontrado">E-mail found</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"><u>Register</u></string>
    <string name="sign_in_new_user"><u>"Register new user"</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_male">"Welcome !"</string>
    <string name="welcome_female">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_sucess">"Login Successfully Completed."</string>
    <string name="remember_user">"Remember user"</string>
    <string name="forgot_pass"><u>"Forgot Password"</u></string>
    <string name="full_name">"Full Name:"</string>
    <string name="first_name">"First Name"</string>
    <string name="CPF">"CPF:"</string>
    <string name="password">Password:</string>
    <string name="alert_password">Must contain uppercase, lowercase, digit, special character and a minimum of 6 characters</string>
    <string name="error">Error</string>
    <string name="sex">Sex:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Income">Income:</string>
    <string name="sifrao">US$ </string>
    <string name="Birth">Date of birth:</string>
    <string name="Address">Address:</string>
    <string name="Celphone">Celphone:</string>
    <string name="full_adress">Enter your address</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="num_adress">Nº</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="number">Number</string>
    <string name="add_phoneNumber">Add number</string>
    <!-- Paises do array de endereço -->
    <string name="us">United States</string>
    <string name="br">Brazil</string>
    <string name="ca">Canada</string>
    <string name="ge">Germany</string>
    <string name="jp">Japan</string>
    <string name="fr">France</string>
    <!-- ********************************* -->
    <!-- Tipos de números de telefone -->
    <string name="num_pessoal">Pes</string>
    <string name="num_profissional">Prof</string>
    <string name="num_residencial">Res</string>
    <string name="num_comercial">Com</string>
    <!-- ********************************* -->
    <string name="btn_cadastrar">DONE</string>
    <string name="esqueci_senha">Forgot Password</string>
    <string name="enviar">Send</string>
    <string name="cod_recuperacao">Enter the code sent</string>
    <string name="nova_senha">Enter the new password</string>
    <string name="gravar">Record</string>
    <string name="pedidos">Your Orders</string>
    <string name="pesquisar">Search</string>
    <string name="pesquisar_produtos">Search product</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home" translatable="false">Home</string>
    <string name="perfil">Profile</string>
    <string name="configuracoes">Settings</string>
    <string name="sair">Exit</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Closed navigation</string>
    <!-- ******************************************************** -->
    <string name="ultimas_compras">Your latest purchases</string>
    <string name="sem_dados">No data to display</string>
    <string name="data">Select the date</string>
    <string name="Vermelho">Red</string>
    <string name="Verde">Green</string>
    <string name="Azul">Blue</string>
    <string name="descartar">Discarded data</string>
    <string name="erro_buscar_cliente">Error searching for customer with ID entered.</string>
    <string name="erro_conexao_db">Error connecting to DB.</string>
    <string name="salvar_dados_ok">Successfully saved data!</string>
    <string name="erro_salvar_dados">Error saving information!</string>
    <string name="msg_logout">Successful logout</string>
    <string name="erro_buscar_token">Error obtaining token.</string>
    <string name="alerta_preencher_campos">Fill in all fields.</string>
    <string name="doc_valido">Valid document</string>
    <string name="doc_invalido">Invalid document</string>
    <string name="cadastrado">Successfully registered!</string>
    <string name="erro_cadastrado">Error when registering information!</string>
    <string name="bad_request" translatable="false">Bad request!</string>
    <string name="erro_processamento">Error processing data!</string>
    <string name="denied_permition">Permission Denied!</string>
    <string name="automatic_login">Automatic login</string>
    <string name="exibir_ultimas_compras">View latest purchases</string>
    <string name="ordenacao_compras">Order of your last purchases</string>
    <string name="ordenacao_nome">Name:</string>
    <string name="ordenacao_preco">Price:</string>
    <string name="ordenacao_data">Date de purchase</string>
    <string name="ordenacao_avaliacao">Rating</string>
    <string name="ordenacao_pesquisa">Order search itens</string>
    <string name="filtro_pesquisa">Fill in any filter for search</string>
    <string name="digite_nome">Enter the name or a part of it</string>
    <string name="ordem_categoria">Category</string>
    <string name="desc_produto">Description:</string>
    <string name="list_compras">Products</string>
    <string name="cod_prd">Product Code: </string>
    <string name="name_prd">Product Name: </string>
    <string name="cod_cli">Client Code: </string>
    <string name="qtd">Amount: </string>
    <string name="dt_compra">purchase date: </string>
    <string name="total">Total: </string>
    <string name="prc_uni">unit price: </string>
    <string name="prd_category">Category: </string>
    <string name="nome_cli">Client Name: </string>
    <string name="valor_total">Total price: </string>
    <string name="id_invalido">Invalid client ID </string>
    <string name="erro_compras">Error when searching for purchases </string>

    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>